# pharma-delivery

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Procfile  README.md  SECURITY.md  admin.py  admin_routes.py  app.py  auth.py  config.py  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  forms.py  mock_data.py  models.py  pyproject.toml  requirements.txt  routes.py  runtime.txt  setup_database.py  utils.py  vercel-build.sh  vercel.json  vercel_build.sh  wsgi.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
api/: index.py  setup_db.py
attached_assets/: Pasted-Cr-e-une-application-web-de-pharmacie-en-ligne-nomm-e-KinPharma-d-di-e-la-livraison-de-m-dica-1748347544539.txt
static/css/: style.css
static/js/: main.js
templates/: base.html  contact.html  index.html
templates/admin/: dashboard.html  messages.html  orders.html  products.html  users.html
templates/auth/: login.html  register.html
templates/cart/: cart.html  checkout.html  index.html
templates/orders/: checkout.html  confirmation.html  history.html  tracking.html
templates/products/: catalog.html  detail.html
templates/user/: profile.html
